samples/_failures_safe/1761470367_6669ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa3422d1.c: In function ‘main’:
./samples/SAFE/__tmp_aa3422d1.c:164:5: error: expected declaration or statement at end of input
  164 |     init_graph(&graph, nodes);
      |     ^~~~~~~~~~
